
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ chdir (char*) ;
 int exit (int) ;
 scalar_t__ mkdir (char*,int) ;
 int perror (char*) ;

int main(void)
{

while(1) {
 if(mkdir("aaaa",0777)<0) {
  perror("mkdir");
  exit(1);
  }
 if(chdir("aaaa")<0) {
  perror("chdir");
  exit(1);
  }
 }

return(0);
}
